--- a/joseluisbz-ms-usuarios/src/main/resources/application.properties
+++ b/joseluisbz-ms-usuarios/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=usuarios
 server.port=8001
 
-spring.h2.console.enabled=true
+spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.sql=debug
 
 secret.key=mySecretKey
 millisecond.expiration=60000
