enable Swagger with authentication

--- a/joseluisbz-ms-usuarios/src/main/resources/application.properties
+++ b/joseluisbz-ms-usuarios/src/main/resources/application.properties
@@ -18,4 +18,5 @@ millisecond.expiration=60000
 format.password=[A-Za-z0-9]+
 #format.password=^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=\S+$).{8,}$
 
-#http://localhost:8001/v2/api-docs
+springdoc.api-docs.path=/open-api/api-docs
+springdoc.swagger-ui.path=/open-api/swagger-ui-custom.html
